# zensical-slate-theme

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Justfile  LICENSE  LICENSE-CONTENT  README.md  README.pypi.md  eslint.config.js  pyproject.toml  zensical.es.toml  zensical.toml
.config/: .cspell.json  .markdownlint.yaml  .markdownlintignore  .stylelintrc.json  404-router.html  lighthouserc.json  lychee.toml
.devcontainer/: Dockerfile  devcontainer.json  install-github-binary.sh  post-create.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  deploy.yml  links.yml  quality.yml  uv-upgrade.yml
content/en/: index.md
content/en/blog/: hello-world.md  index.md
content/en/projects/: index.md
content/es/: index.md
content/es/blog/: hello-world.md  index.md
content/es/projects/: index.md
docs/: decisions.md  security_assessment.md
scripts/: check_i18n.py
zensical_slate_theme/: __init__.py  main.html  mkdocs_theme.yml
zensical_slate_theme/assets/javascripts/: extra.js
zensical_slate_theme/assets/stylesheets/: extra.css
