[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slate-theme"
version = "0.1.0"
description = "A sleek, developer-focused, and open-source bilingual portfolio and blog site theme for Zensical."
readme = "README.pypi.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Fernando Landero", email = "landerox@gmail.com" }
]
keywords = [
    "zensical",
    "theme",
    "slate",
    "portfolio",
    "blog",
    "bilingual",
    "mkdocs",
    "developer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "zensical>=0.0.45",
]


[project.entry-points."mkdocs.themes"]
slate = "zensical_slate_theme"

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/landerox/zensical-slate-theme"
Repository = "https://github.com/landerox/zensical-slate-theme"
Issues = "https://github.com/landerox/zensical-slate-theme/issues"

[tool.hatch.build.targets.wheel]
packages = ["zensical_slate_theme"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
gpg_sign = true


